--- a/daegmael/manifest.json
+++ b/daegmael/manifest.json
@@ -14,6 +14,7 @@
     }
   ],
   "start_url": "./index.html",
+  "orientation": "portrait",
   "display": "fullscreen",
   "background_color": "#2d3351",
   "theme_color": "#ffd700"
